--- a/onestep/src/Walks/SingleWalk/index.module.scss
+++ b/onestep/src/Walks/SingleWalk/index.module.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex: 2;
     flex-direction: row; 
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
   }
 
